<resources>
    <string name="app_name">VFR Manual</string>
    <string name="rwy">RWY</string>
    <string name="freq">FREQ</string>
    <string name="elev">Elevation</string>
    <string name="circleAlt">Circle Alt</string>
    <string name="distance">DIST</string>
    <string name="direction">Direction</string>
    <string name="bearing">Bearing</string>

    <string name="menu_show_nearest">Show nearest</string>
    <string name="menu_other">Additional information</string>
    <string name="menu_delete_history">Delete history</string>
    <string name="menu_about">About</string>

    <!--<string name="menu_adc">ADC</string>-->
    <!--<string name="menu_voc">VOC</string>-->
    <!--<string name="menu_adc_long">Airport situation</string>-->
    <!--<string name="menu_voc_long">Surroundings map</string>-->

    <string name="about_intro1">Application for quick and easy orientation when traveling to unknown or unfamiliar airfields. Offline available information is grabbed and updated from</string>
    <string name="about_intro_url">lis.rlp.cz/vfrmanual</string>
    <string name="about_intro_url2">openflightmaps.org</string>
    <string name="about_intro_url3">aerobaze.cz/gps</string>
    <string name="about_intro2">and post-processed for seamless use. Data is valid from:</string>
    <string name="data_valid_from">2020-08-13</string>
    <string name="about_author">Author: Ibišek</string>
    <string name="about_version">Application version: 2020-08-04</string>
    <string name="about_download_url">www.ibisek.com</string>
    <string name="about_github">Source code of the app as well as data acquisition scripts are available on</string>
    <string name="about_github_url">github.com/ibisek/vfrManual-android</string>
    <string name="about_github_releases">Releases with updates:</string>
    <string name="about_github_releases_url">github.com/ibisek/vfrManual-android/releases</string>
    <string name="about_paypal">If you want to support VFR Manual development you can buy me a beer or two :)</string>
    <string name="about_paypal_url">paypal.me/ibisek</string>


    <string name="title_activity_swipe">SwipeActivity</string>

    <string name="swipescreen_title_adc">Airport situation</string>
    <string name="swipescreen_title_vor">Surroundings map</string>
    <string name="swipescreen_title_textinfo">Additional info</string>

    <string name="textinfo_procedures">Procedures</string>
    <string name="textinfo_contacts">Contacts</string>
    <string name="textinfo_services">Services</string>
    <string name="textinfo_services_fuel">Fuel</string>
    <string name="textinfo_services_oil">Oil</string>

    <string name="other_text1_left_column">Prague Information West\nPrague Information East\nPrague Information Morava</string>
    <string name="other_text1_right_column">126.100\n136.175\n136.275</string>
    <string name="other_text2_left_column">Brno ATIS\nOstrava ATIS\nPrague ATIS\nKarlovy Vary ATIS</string>
    <string name="other_text2_right_column">131.105\n118.055\n122.160\n118,955</string>
    <string name="other_text3_left_column">Gliding\nBalooning</string>
    <string name="other_text3_right_column">130,930\n122.155</string>

    <string name="nearest_title">Nearest landables</string>
    <string name="nearest_welcome_toast">Waiting for GPS fix</string>

    <string name="gps_settings_text">GPS location service disabled</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_cancel">Cancel</string>

</resources>
