<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibisek.vfrmanualcz.ListItemMultiFreq">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Krizanov"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="LKKA"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/freqCallSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="133,155 Krizanov RADIO"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/rwyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/rwy"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/freqCallSign"
                tools:text="@string/rwy" />

            <TextView
                android:id="@+id/runway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:text="14-32"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/rwyLabel"
                app:layout_constraintTop_toBottomOf="@+id/freqCallSign" />

            <TextView
                android:id="@+id/elevation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:text="559m"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/freqCallSign" />

            <TextView
                android:id="@+id/circleAlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="850m"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/elevation" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="8dp"
                android:text="@string/elev"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/elevation"
                app:layout_constraintTop_toBottomOf="@+id/freqCallSign"
                tools:text="@string/elev" />

            <TextView
                android:id="@+id/circleAltLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/circleAlt"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/circleAlt"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                tools:text="@string/circleAlt" />

            <TextView
                android:id="@+id/runwayDim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="860x50"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/runway"
                app:layout_constraintTop_toBottomOf="@+id/freqCallSign"
                tools:text="860x50" />

            <TextView
                android:id="@+id/runway2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="6dp"
                android:text="00-11"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/runway" />

            <TextView
                android:id="@+id/runway2Dim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="17dp"
                android:text="1234x56"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/runway2"
                app:layout_constraintTop_toBottomOf="@+id/runwayDim" />

            <TextView
                android:id="@+id/runway3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="6dp"
                android:text="11-22"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/runway2" />

            <TextView
                android:id="@+id/runway3Dim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="2345x80"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/runway3"
                app:layout_constraintTop_toBottomOf="@+id/runway2Dim" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="123 km"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/distanceLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/directionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/direction"
                app:layout_constraintEnd_toStartOf="@+id/direction"
                app:layout_constraintTop_toTopOf="@+id/direction" />

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/distance"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/distance" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="◀ 12\u00B0 ▶"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/distance" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</FrameLayout>
